@@ -11,6 +11,7 @@ Application Changes:
 - Critters can now have karma spent on improving their abilities without having to save and then reload their file.
 - Creating certain improvements no longer causes Chummer to crash.
 - Adding and/or removing lifestyle qualities no longer generates orphaned improvements.
+- Encumbrance penalties and maximum skill ratings can now properly be modified through the Character Settings window.
 
 Changed/New Strings:
 - Checkbox_Options_SpecializationsBreakSkillGroups
